--- a/SourceCode/benchmark/templatePdf/resources.html
+++ b/SourceCode/benchmark/templatePdf/resources.html
@@ -827,6 +827,7 @@
 </th:block>
 <th:block th:fragment="js">
     <script type="text/javascript">
+        <!--
        /**
        * Can get the ID of the button controlling
        * a collapseable box by concatenating
@@ -1078,7 +1079,7 @@
 
         /******** WKM *************/
         /**
-        * Makes all of the pass results disappear -- effectively shows only failures
+        * Makes all of the pass results disappear - effectively shows only failures
         */
         function hidePassAreas() {
             handleUncheckedDisplay("failuresOnlyArea", "visible", "hidden");
@@ -1093,7 +1094,7 @@
         }
 
         /**
-        * Makes all of the pass results show up -- effectively shows all results
+        * Makes all of the pass results show up - effectively shows all results
         */
         function displayPassAreas() {
             handleUncheckedDisplay("failuresOnlyArea", "hidden", "visible");
@@ -1171,6 +1172,7 @@
                 }
             }
         }
+    -->
     </script>
 </th:block>
 
