update profile windows

--- a/SourceCode/benchmark/templatePdf/CIS_Ubuntu_Linux_18.04_LTS_Benchmark_v2.0.1.html
+++ b/SourceCode/benchmark/templatePdf/CIS_Ubuntu_Linux_18.04_LTS_Benchmark_v2.0.1.html
@@ -609,99 +609,9 @@
                   </tr>
                </thead>
                <tbody>
-                  <tr valign="top" th:class="${level.id == '1SV' ? ' selected-row' : ''} ">
-                     <td>Level 1 - Server</td>
-                     <td>
-                        <p>Items in this profile intend to:</p>
-                        <ul>
-                           <li>be practical and prudent;</li>
-                           <li>provide a clear security benefit; and</li>
-                           <li>not inhibit the utility of the technology beyond acceptable means.</li>
-                        </ul>
-                        <p>This profile is intended for servers.</p>
-                        <div class="profile-action">
-                           <span class="action" id="w4583aac13_xml_button"
-                              onclick="switchState('w4583aac13_xml'); return false;">Show</span>
-                           <span class="caption"> Profile XML</span>
-                        </div>
-                        <div class="xml" id="w4583aac13_xml">
-                           <pre></pre>
-                        </div>
-                        <script type="text/javascript">
-                           setState('w4583aac13_xml', false);
-                        </script>
-                     </td>
-                  </tr>
-                  <tr valign="top" th:class="${level.id == '2SV' ? ' selected-row' : ''} ">
-                     <td>Level 2 - Server</td>
-                     <td>
-                        <p>This profile extends the "Level 1 - Server" profile. Items in this profile exhibit one or
-                           more of the following characteristics:</p>
-                        <ul>
-                           <li>are intended for environments or use cases where security is paramount.</li>
-                           <li>acts as defense in depth measure.</li>
-                           <li>may negatively inhibit the utility or performance of the technology.</li>
-                        </ul>
-                        <p>This profile is intended for servers.</p>
-                        <div class="profile-action">
-                           <span class="action" id="w4583aac15_xml_button"
-                              onclick="switchState('w4583aac15_xml'); return false;">Show</span>
-                           <span class="caption"> Profile XML</span>
-                        </div>
-                        <div class="xml" id="w4583aac15_xml">
-                           <pre></pre>
-                        </div>
-                        <script type="text/javascript">
-                           setState('w4583aac15_xml', false);
-                        </script>
-                     </td>
-                  </tr>
-                  <tr valign="top" th:class="${level.id == '1WS' ? ' selected-row' : ''} ">
-                     <td>Level 1 - Workstation</td>
-                     <td>
-                        <p>Items in this profile intend to:</p>
-                        <ul>
-                           <li>be practical and prudent;</li>
-                           <li>provide a clear security benefit; and</li>
-                           <li>not inhibit the utility of the technology beyond acceptable means.</li>
-                        </ul>
-                        <p>This profile is intended for workstations.</p>
-                        <div class="profile-action">
-                           <span class="action" id="w4583aac17_xml_button"
-                              onclick="switchState('w4583aac17_xml'); return false;">Show</span>
-                           <span class="caption"> Profile XML</span>
-                        </div>
-                        <div class="xml" id="w4583aac17_xml">
-                           <pre></pre>
-                        </div>
-                        <script type="text/javascript">
-                           setState('w4583aac17_xml', false);
-                        </script>
-                     </td>
-                  </tr>
-                  <tr valign="top" th:class="${level.id == '2WS' ? ' selected-row' : ''} ">
-                     <td>Level 2 - Workstation</td>
-                     <td>
-                        <p>This profile extends the "Level 1 - Workstation" profile. Items in this profile exhibit one
-                           or more of the following characteristics:</p>
-                        <ul>
-                           <li>are intended for environments or use cases where security is paramount.</li>
-                           <li>acts as defense in depth measure.</li>
-                           <li>may negatively inhibit the utility or performance of the technology.</li>
-                        </ul>
-                        <p>This profile is intended for workstations.</p>
-                        <div class="profile-action">
-                           <span class="action" id="w4583aac19_xml_button"
-                              onclick="switchState('w4583aac19_xml'); return false;">Show</span>
-                           <span class="caption"> Profile XML</span>
-                        </div>
-                        <div class="xml" id="w4583aac19_xml">
-                           <pre></pre>
-                        </div>
-                        <script type="text/javascript">
-                           setState('w4583aac19_xml', false);
-                        </script>
-                     </td>
+                  <tr th:each="lvl : ${audit.levelList}" valign="top" th:class="${level.id == lvl.id ? ' selected-row' : ''} ">
+                     <td th:text="${lvl.name}"></td>
+                     <td th:utext="${lvl.description}"></td>
                   </tr>
                </tbody>
             </table>
