--- a/SourceCode/benchmark/templatePdf/CIS_Microsoft_Windows_Server_2012_R2_Benchmark_v2.2.1.html
+++ b/SourceCode/benchmark/templatePdf/CIS_Microsoft_Windows_Server_2012_R2_Benchmark_v2.2.1.html
@@ -11,7 +11,7 @@
 
 <body>
    <div id="reportContainer">
-      <div th:replace="resources.html::coverPage"></div>
+      <div th:replace="resources.html::coverPage('CIS_Microsoft_Windows_Server_2012_R2_Benchmark_v2.2.1')"></div>
       <div id="detailsContainer">
          <div>
             <script type="text/javascript">
