--- a/SourceCode/benchmark/templatePdf/CIS_Ubuntu_Linux_18.04_LTS_Benchmark_v2.0.1.html
+++ b/SourceCode/benchmark/templatePdf/CIS_Ubuntu_Linux_18.04_LTS_Benchmark_v2.0.1.html
@@ -11,7 +11,7 @@
 
 <body>
    <div id="reportContainer">
-      <div th:replace="resources.html::coverPage"></div>
+      <div th:replace="resources.html::coverPage('CIS_Ubuntu_Linux_18.04_LTS_Benchmark_v2.0.1')"></div>
       <div id="detailsContainer">
          <div>
             <script type="text/javascript">
