tối ưu trải nghiệm

--- a/SourceCode/benchmark/templatePdf/CIS_Ubuntu_Linux_18.04_LTS_Benchmark_v2.0.1.html
+++ b/SourceCode/benchmark/templatePdf/CIS_Ubuntu_Linux_18.04_LTS_Benchmark_v2.0.1.html
@@ -603,7 +603,7 @@
             </p>
             <table class="profile" width="100%">
                <thead>
-                  <tr>
+                  <tr class="thead">
                      <th width="20%">Title</th>
                      <th width="80%">Description</th>
                   </tr>
