--- a/SourceCode/benchmark/templatePdf/CIS_Ubuntu_Linux_18.04_LTS_Benchmark_v2.0.1.html
+++ b/SourceCode/benchmark/templatePdf/CIS_Ubuntu_Linux_18.04_LTS_Benchmark_v2.0.1.html
@@ -80,7 +80,7 @@
                               <tr th:id="'result-' + ${rep.id}"
                                  th:class="${rep.status == true or rep.type == 'UNKNOWN'} ? 'failuresOnlyArea tableVisible' : ''">
                                  <td>
-                                    <span class="weight">1.0</span>
+                                    <span class="weight"></span>
                                  </td>
                                  <td>
                                     <a th:href="'#detail-' + ${rep.id}" th:text="${rep.id + ' ' + rep.description}"></a>
